--- a/button/.vscode/settings.json
+++ b/button/.vscode/settings.json
@@ -1,6 +1,6 @@
-{
-    "files.associations": {
-        "button.h": "c",
-        "main.h": "c"
-    }
-}
+// {
+//     "files.associations": {
+//         "button.h": "c",
+//         // "main.h": "c"
+//     }
+// }
